--- a/source/less/blocks/download.less
+++ b/source/less/blocks/download.less
@@ -10,7 +10,13 @@
   @media (min-width: @tablet-width) {
     position: absolute;
     left: 0;
-    top: -500px;
+    top: -600px;
+  }
+
+  @media (min-width: @desktop-width) {
+    position: absolute;
+    left: 130px;
+    top: -600px;
   }
 }
 
