--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -2,16 +2,18 @@
   width: 280px;
   margin: 0 auto;
   padding: 50px 20px;
+  padding-bottom: 0;
 
   @media (min-width: @tablet-width) {
     width: 620px;
     padding: 45px 20px;
+    padding-bottom: 0;
   }
 
   @media (min-width: @desktop-width) {
     width: 940px;
     padding: 180px 10px;
-    padding-bottom: 130px;
+    padding-bottom: 0;
   }
 }
 
@@ -22,12 +24,25 @@
 .reveiws__item {
   padding: 0 20px;
   text-align: center;
+
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .reviews__author {
   font-size: 18px;
   line-height: 30px;
   font-weight: bold;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 24px;
+  }
 }
 
 .reviews__author-addition {
@@ -37,14 +52,50 @@
 
   @media (min-width: @tablet-width) {
     display: block;
+    padding-bottom: 30px;
+  }
+
+  @media (min-width: @desktop-width) {
+    font-size: 18px;
   }
 }
 
 .reviews__text {
   margin: 0;
   padding: 30px 0;
+
+  @media (min-width: @tablet-width) {
+    order: -1;
+    font-size: 18px;
+  }
 }
 
 .reviews__toggles {
   margin: 0;
+  text-align: center;
+
+   @media (min-width: @desktop-width) {
+    display: none;
+  }
+}
+
+.slider__toggle {
+  width: 7px;
+  height: 7px;
+  margin: 0 auto;
+  margin-right: 15px;
+  padding: 0;
+  border: none;
+  border-radius: 50%;
+  background-color: #e5e5e5;
+
+    &--active {
+      box-sizing: content-box;
+      background-color: #ffffff;
+      border: 3px solid @bg-darkblue;
+  }
+}
+
+.slider__toggle:last-child {
+  margin-right: 0;
 }
