--- a/source/less/blocks/socials.less
+++ b/source/less/blocks/socials.less
@@ -6,14 +6,30 @@
 }
 
 .socials__item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 46px;
   height: 46px;
   margin-right: 10px;
   margin-bottom: 5px;
   border: 3px solid @bg-grey;
   border-radius: 50%;
+
+  &:hover,
+  &:focus {
+    border: 3px solid @bg-darkblue;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
 
 .socials__item:last-child {
   margin-right: 0;
+}
+
+.socials__icon {
+  fill: #d22856;
 }
